Modify tables, add contrasts

--- a/final_report/data_analyses/tables/tab_lmer.tex
+++ b/final_report/data_analyses/tables/tab_lmer.tex
@@ -1,28 +1,28 @@
-\begin{longtable}{lllrrrrr}
+\begin{longtable}{lrrrrl}
 \caption*{
 {\large Linear Mixed-Effects Model Results} \\ 
 {\small Summary of Fixed Effects}
 } \\ 
 \toprule
-effect & group & Term & Estimate & Std. Error & t-value & DF & p-value \\ 
+Term & Estimate & Std. Error & t-value & DF & p-value \\ 
 \midrule\addlinespace[2.5pt]
-fixed & NA & (Intercept) & $3.38$ & $0.08$ & $42.81$ & $42.45$ & $0.000$ \\ 
-fixed & NA & Day & $0.24$ & $0.00$ & $58.95$ & $3,632.20$ & $0.000$ \\ 
-fixed & NA & Type2 & $2.01$ & $0.09$ & $21.26$ & $147.80$ & $0.000$ \\ 
-fixed & NA & Day:Compound2 & $-0.11$ & $0.01$ & $-17.72$ & $3,633.31$ & $0.000$ \\ 
-fixed & NA & Day:Compound3 & $-0.08$ & $0.01$ & $-12.76$ & $3,634.36$ & $0.000$ \\ 
-fixed & NA & Day:Compound4 & $0.11$ & $0.01$ & $19.57$ & $3,621.41$ & $0.000$ \\ 
-fixed & NA & Day:Compound5 & $-0.07$ & $0.01$ & $-11.37$ & $3,633.16$ & $0.000$ \\ 
-fixed & NA & Day:Compound6 & $-0.07$ & $0.01$ & $-11.43$ & $3,633.21$ & $0.000$ \\ 
-fixed & NA & Day:Compound7 & $0.07$ & $0.01$ & $11.29$ & $3,621.41$ & $0.000$ \\ 
-fixed & NA & Day:Compound8 & $0.11$ & $0.01$ & $19.02$ & $3,633.22$ & $0.000$ \\ 
-fixed & NA & Day:Compound9 & $-0.02$ & $0.01$ & $-3.79$ & $3,632.76$ & $0.000$ \\ 
-fixed & NA & Day:Compound10 & $0.15$ & $0.01$ & $26.41$ & $3,621.41$ & $0.000$ \\ 
-fixed & NA & Day:Compound11 & $-0.05$ & $0.01$ & $-8.35$ & $3,633.22$ & $0.000$ \\ 
-fixed & NA & Day:Compound12 & $0.08$ & $0.01$ & $12.66$ & $3,632.75$ & $0.000$ \\ 
-fixed & NA & Day:Compound13 & $-0.03$ & $0.01$ & $-4.98$ & $3,621.41$ & $0.000$ \\ 
-fixed & NA & Day:Compound14 & $-0.04$ & $0.01$ & $-7.25$ & $3,633.00$ & $0.000$ \\ 
-fixed & NA & Day:Compound15 & $-0.06$ & $0.01$ & $-10.83$ & $3,632.75$ & $0.000$ \\ 
+(Intercept) & $3.38$ & $0.08$ & $42.81$ & 42 & <.001 \\ 
+Day & $0.24$ & $0.00$ & $58.95$ & 3632 & <.001 \\ 
+Type2 & $2.01$ & $0.09$ & $21.26$ & 148 & <.001 \\ 
+Day:CompoundApathic Acid & $-0.11$ & $0.01$ & $-17.72$ & 3633 & <.001 \\ 
+Day:CompoundBeerse Brew & $-0.08$ & $0.01$ & $-12.76$ & 3634 & <.001 \\ 
+Day:CompoundConcentrate of Caducues & $0.11$ & $0.01$ & $19.57$ & 3621 & <.001 \\ 
+Day:CompoundDistilled of Discovery & $-0.07$ & $0.01$ & $-11.37$ & 3633 & <.001 \\ 
+Day:CompoundEssence of Epiphanea & $-0.07$ & $0.01$ & $-11.43$ & 3633 & <.001 \\ 
+Day:CompoundFour in December & $0.07$ & $0.01$ & $11.29$ & 3621 & <.001 \\ 
+Day:CompoundGranule of Geheref & $0.11$ & $0.01$ & $19.02$ & 3633 & <.001 \\ 
+Day:CompoundKar-Hamel Mooh & $-0.02$ & $0.01$ & $-3.79$ & 3633 & <.001 \\ 
+Day:CompoundLucifer’s Liquid & $0.15$ & $0.01$ & $26.41$ & 3621 & <.001 \\ 
+Day:CompoundNoospherol & $-0.05$ & $0.01$ & $-8.35$ & 3633 & <.001 \\ 
+Day:CompoundOil of John’s Son & $0.08$ & $0.01$ & $12.66$ & 3633 & <.001 \\ 
+Day:CompoundPowder of Perlimpinpin & $-0.03$ & $0.01$ & $-4.98$ & 3621 & <.001 \\ 
+Day:CompoundSpirit of Scienza & $-0.04$ & $0.01$ & $-7.25$ & 3633 & <.001 \\ 
+Day:CompoundZest of Zen & $-0.06$ & $0.01$ & $-10.83$ & 3633 & <.001 \\ 
 \bottomrule
 \end{longtable}
 
