--- a/final_report/data_analyses/tables/tab_lmer_sel.tex
+++ b/final_report/data_analyses/tables/tab_lmer_sel.tex
@@ -6,10 +6,10 @@
 \toprule
 Model & Formula & AIC & BIC & R\textasciicircum{}2 \\ 
 \midrule\addlinespace[2.5pt]
-0 & Compound + Day + FlowerID & 7830 & 7942 & 0.694 \\ 
-1 & Compound:Day + Day + FlowerID & 4924 & 5035 & 0.655 \\ 
+0 & Compound + Day + FlowerID  + SubplotID & 7830 & 7942 & 0.694 \\ 
+1 & Compound*Day + FlowerID + SubplotID & 4912 & 5117 & 0.736 \\ 
 2 & Compound:Day + Day + FlowerID + SubplotID & 4926 & 5044 & 0.655 \\ 
-3 & Compound:Day + Day + Species + FlowerID + SubplotID & 4714 & 4838 & 0.874 \\ 
+3 & Compound:Day + Day + Species + Type + FlowerID + SubplotID & 4714 & 4838 & 0.874 \\ 
 4 & Compound:Day + Day + Species + Garden + FlowerID + SubplotID & 4718 & 4848 & 0.873 \\ 
 \bottomrule
 \end{longtable}
