--- a/final_report/data_analyses/tables/tab_lmer_contr.tex
+++ b/final_report/data_analyses/tables/tab_lmer_contr.tex
@@ -1,17 +1,17 @@
-\begin{longtable}{>{\raggedright\arraybackslash}p{350px}rrrrr}
+\begin{longtable}{>{\raggedright\arraybackslash}p{180px}rrrrl}
 \caption*{
 {\large Contrast Results} \\ 
 {\small Estimated Marginal Means Contrasts}
 } \\ 
 \toprule
-Contrast & Estimate & Std. Error & Degrees of Freedom & t-value & p-value \\ 
+Contrast & Estimate & SE & DF & t-value & p-value \\ 
 \midrule\addlinespace[2.5pt]
-Apathic Acid - Beerse Brew & $-0.318$ & $0.062$ & $3,633$ & $-5.138$ & 3.07e-05 \\ 
-Apathic Acid - Distilled of Discovery & $-0.388$ & $0.063$ & $3,623$ & $-6.182$ & 7.37e-08 \\ 
-Apathic Acid - Essence of Epiphanea & $-0.411$ & $0.061$ & $3,634$ & $-6.789$ & 1.38e-09 \\ 
-Beerse Brew - Distilled of Discovery & $-0.070$ & $0.062$ & $3,633$ & $-1.146$ & 1.00e+00 \\ 
-Beerse Brew - Essence of Epiphanea & $-0.094$ & $0.059$ & $3,623$ & $-1.583$ & 1.00e+00 \\ 
-Distilled of Discovery - Essence of Epiphanea & $-0.023$ & $0.060$ & $3,633$ & $-0.385$ & 1.00e+00 \\ 
+Apathic Acid - Beerse Brew & $-0.32$ & $0.06$ & 3633 & $-5.14$ & <.001 \\ 
+Apathic Acid - Distilled of Discovery & $-0.39$ & $0.06$ & 3623 & $-6.18$ & <.001 \\ 
+Apathic Acid - Essence of Epiphanea & $-0.41$ & $0.06$ & 3634 & $-6.79$ & <.001 \\ 
+Beerse Brew - Distilled of Discovery & $-0.07$ & $0.06$ & 3633 & $-1.15$ & 1 \\ 
+Beerse Brew - Essence of Epiphanea & $-0.09$ & $0.06$ & 3623 & $-1.58$ & 1 \\ 
+Distilled of Discovery - Essence of Epiphanea & $-0.02$ & $0.06$ & 3633 & $-0.38$ & 1 \\ 
 \bottomrule
 \end{longtable}
 
