update lmer table

--- a/final_report/data_analyses/tables/tab_lmer.tex
+++ b/final_report/data_analyses/tables/tab_lmer.tex
@@ -9,20 +9,20 @@ Term & Estimate & Std. Error & t-value & DF & p-value \\
 (Intercept) & $3.38$ & $0.08$ & $42.81$ & 42 & <.001 \\ 
 Day & $0.24$ & $0.00$ & $58.95$ & 3632 & <.001 \\ 
 Type2 & $2.01$ & $0.09$ & $21.26$ & 148 & <.001 \\ 
-Day:CompoundApathic Acid & $-0.11$ & $0.01$ & $-17.72$ & 3633 & <.001 \\ 
-Day:CompoundBeerse Brew & $-0.08$ & $0.01$ & $-12.76$ & 3634 & <.001 \\ 
-Day:CompoundConcentrate of Caducues & $0.11$ & $0.01$ & $19.57$ & 3621 & <.001 \\ 
-Day:CompoundDistilled of Discovery & $-0.07$ & $0.01$ & $-11.37$ & 3633 & <.001 \\ 
-Day:CompoundEssence of Epiphanea & $-0.07$ & $0.01$ & $-11.43$ & 3633 & <.001 \\ 
-Day:CompoundFour in December & $0.07$ & $0.01$ & $11.29$ & 3621 & <.001 \\ 
-Day:CompoundGranule of Geheref & $0.11$ & $0.01$ & $19.02$ & 3633 & <.001 \\ 
-Day:CompoundKar-Hamel Mooh & $-0.02$ & $0.01$ & $-3.79$ & 3633 & <.001 \\ 
-Day:CompoundLucifer’s Liquid & $0.15$ & $0.01$ & $26.41$ & 3621 & <.001 \\ 
-Day:CompoundNoospherol & $-0.05$ & $0.01$ & $-8.35$ & 3633 & <.001 \\ 
-Day:CompoundOil of John’s Son & $0.08$ & $0.01$ & $12.66$ & 3633 & <.001 \\ 
-Day:CompoundPowder of Perlimpinpin & $-0.03$ & $0.01$ & $-4.98$ & 3621 & <.001 \\ 
-Day:CompoundSpirit of Scienza & $-0.04$ & $0.01$ & $-7.25$ & 3633 & <.001 \\ 
-Day:CompoundZest of Zen & $-0.06$ & $0.01$ & $-10.83$ & 3633 & <.001 \\ 
+Apathic Acid : day & $-0.11$ & $0.01$ & $-17.72$ & 3633 & <.001 \\ 
+Beerse Brew : day & $-0.08$ & $0.01$ & $-12.76$ & 3634 & <.001 \\ 
+Concentrate of Caducues : day & $0.11$ & $0.01$ & $19.57$ & 3621 & <.001 \\ 
+Distilled of Discovery & $-0.07$ & $0.01$ & $-11.37$ & 3633 & <.001 \\ 
+Essence of Epiphanea : day & $-0.07$ & $0.01$ & $-11.43$ & 3633 & <.001 \\ 
+Four in December : day & $0.07$ & $0.01$ & $11.29$ & 3621 & <.001 \\ 
+Granule of Geheref : day & $0.11$ & $0.01$ & $19.02$ & 3633 & <.001 \\ 
+Kar-Hamel Mooh : day & $-0.02$ & $0.01$ & $-3.79$ & 3633 & <.001 \\ 
+Lucifer’s Liquid : day & $0.15$ & $0.01$ & $26.41$ & 3621 & <.001 \\ 
+Noospherol : day & $-0.05$ & $0.01$ & $-8.35$ & 3633 & <.001 \\ 
+Oil of John’s Son : day & $0.08$ & $0.01$ & $12.66$ & 3633 & <.001 \\ 
+Powder of Perlimpinpin : day & $-0.03$ & $0.01$ & $-4.98$ & 3621 & <.001 \\ 
+Spirit of Scienza : day & $-0.04$ & $0.01$ & $-7.25$ & 3633 & <.001 \\ 
+Zest of Zen : day & $-0.06$ & $0.01$ & $-10.83$ & 3633 & <.001 \\ 
 \bottomrule
 \end{longtable}
 
